--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Untitled Document</title>
     <!-- Bootstrap -->
 	<link href="css/bootstrap.css" rel="stylesheet">
+    
+    <!-- My Styles -->
+    <link href="css/style.css" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,6 +19,14 @@
 		<![endif]-->
   </head>
   <body>
+  <article>
+  <h1>Video Background Snippet</h1>
+</article>
+<video autoplay="" loop="" class="fillWidth fadeIn animated" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Traffic-blurred2.jpg" id="video-background">
+    <source src="https://s3-us-west-2.amazonaws.com/coverr/mp4/Traffic-blurred2.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
+</video>
+  
+  
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 	<script src="js/jquery-1.11.3.min.js"></script>
 
