--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
   </head>
   <body>
   <article>
-  <h1>Video Background Snippet</h1>
+  <h1>2017 Legislative Priorities</h1>
 </article>
+<div class="container">
+	<div class="row col-xs-12 text-center">
+<img src="img/2016_CPPP_Logo_Reverse_web.png" id="logo" alt="CPPP Logo">
+	</div>
+</div>
 <video autoplay="" loop="" class="fillWidth fadeIn animated" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Traffic-blurred2.jpg" id="video-background">
     <source src="https://s3-us-west-2.amazonaws.com/coverr/mp4/Traffic-blurred2.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
 </video>
