--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     
     <!-- My Styles -->
     <link href="css/style.css" rel="stylesheet">
+    
+    <!-- my fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
