--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="img/P10001450.jpg" id="video-background">
-            <source src="img/capitol.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
+            <source src="img/P1000145_1.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
         </video>
     </header>
     <section class="bg-primary" id="one">
