--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CPPP 2017 Legislative Priorities</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700|PT+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
@@ -52,8 +52,12 @@
     <header id="first">
         <div class="header-content">
             <div class="inner">
-                <h1><strong>2017 Legislative Priorities</strong></h1>
-                <p>What we want to see happen during the 2017 Texas Legislative Session.</p>
+            	<img src="img/2015_COM_CPPP_logo_letterhead.png" alt="Logo">
+                <h1><strong>2017</strong> Legislative Priorities</h1>
+                <p>At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
+                <br>
+                <br>
+Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
                 <hr>
             </div>
         </div>
