added logo to header, drop shadow to header text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header id="first">
         <div class="header-content">
             <div class="inner">
-            	<img src="img/2015_COM_CPPP_logo_letterhead.png" alt="Logo">
+            	<a href="http://cppp.org" <img src="img/2015_COM_CPPP_logo_letterhead.png" alt="Logo" id="logo"></a>
                 <h1><strong>2017</strong> Legislative Priorities</h1>
                 <p>At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
                 <br>
