added PDF Button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 <br>
                 <br>
 Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
+				<br>
+                <p><i>Updated 11/1/2016</i></p>
+                <a href="" alt="PDF Version" id="pdfbutton">DOWNLOAD PDF VERSION</a>
                 <hr>
             </div>
         </div>
