--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CPPP 2017 Legislative Priorities</title>
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.ico" type="image/png">
+    <link rel="shortcut icon" href="favicon.ico" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700|PT+Sans:400,700" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css" rel="stylesheet" />
