--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first"><i class="ion-ios-analytics-outline"></i>2017 Legislative Priorities</a>
+                <a class="navbar-brand page-scroll" href="#first">2017 Legislative Priorities</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
