changed about modal content

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" data-toggle="modal" title="A free Bootstrap video landing theme" href="#aboutModal">About</a>
+                        <a class="page-scroll" data-toggle="modal" title="Center for Public Policy Priorities" href="#aboutModal">About</a>
                     </li>
                 </ul>
             </div>
@@ -380,14 +380,17 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         <div class="modal-dialog">
         <div class="modal-content">
         	<div class="modal-body">
-        		<h2 class="text-center">Landing Zero Theme</h2>
+        		<h2 class="text-center">Center for Public Policy Priorities</h2>
         		<h5 class="text-center">
-        		    A free, responsive landing page theme built by BootstrapZero.
+        		    Our Vision and Core Purpose
         		</h5>
         		<p class="text-justify">
-        		    This is a single-page Bootstrap template with a sleek dark/grey color scheme, accent color and smooth scrolling.
-        		    There are vertical content sections with subtle animations that are activated when scrolled into view using the jQuery WOW plugin. There is also a gallery with modals
-        		    that work nicely to showcase your work portfolio. Other features include a contact form, email subscribe form, multi-column footer. Uses Questrial Google Font and Ionicons.
+        		    At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas - a proud state that sets the bar nationally by expanding opportunity for all. 
+                    <br>
+                    <br>
+                    CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds 
+to reach their full potential. We dare Texas to be the best state for 
+hard-working people and their families. 
         		</p>
         		<p class="text-center"><a href="http://www.bootstrapzero.com">Download at BootstrapZero</a></p>
         		<br/>
