--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
 to reach their full potential. We dare Texas to be the best state for 
 hard-working people and their families. 
         		</p>
-        		<p class="text-center"><a href="http://www.bootstrapzero.com">Download at BootstrapZero</a></p>
+        		<a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" alt="CPPP Logo"></a>
         		<br/>
         		<button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true"> OK </button>
         	</div>
