--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header id="first">
         <div class="header-content">
             <div class="inner">
-            	<a href="http://cppp.org"> <img src="img/2015_COM_CPPP_logo_letterhead.png" alt="Logo" id="logo"></a>
+            	<a href="http://cppp.org"> <img src="img/2015_COM_CPPP_logo_letterhead.png" alt="Logo" class="logo"></a>
                 <h1><strong>2017</strong> Legislative Priorities</h1>
                 <p>At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
                 <br>
@@ -392,7 +392,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
 to reach their full potential. We dare Texas to be the best state for 
 hard-working people and their families. 
         		</p>
-        		<a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" alt="CPPP Logo"></a>
+        		<a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" alt="CPPP Logo" class="logo"></a>
         		<br/>
         		<button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true"> OK </button>
         	</div>
