--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         <div class="modal-dialog">
         <div class="modal-content">
         	<div class="modal-body">
-        		<h2 class="text-center">Center for Public Policy Priorities</h2>
+        		<a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" alt="CPPP Logo" class="logo text-center"></a>
         		<h5 class="text-center">
         		    Our Vision and Core Purpose
         		</h5>
@@ -392,7 +392,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
 to reach their full potential. We dare Texas to be the best state for 
 hard-working people and their families. 
         		</p>
-        		<a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" alt="CPPP Logo" class="logo"></a>
+        		
         		<br/>
         		<button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true"> OK </button>
         	</div>
