--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         <div class="modal-dialog">
         <div class="modal-content">
         	<div class="modal-body">
-        		<a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" alt="CPPP Logo" class="logo text-center"></a>
+        		<a href="http://cppp.org" class="text-center"><img src="img/2015_COM_CPPP_logo_letterhead.png" alt="CPPP Logo" class="logo"></a>
         		<h5 class="text-center">
         		    Our Vision and Core Purpose
         		</h5>
