took out modal logo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
 				<br>
                 <p><i>Updated 11/1/2016</i></p>
-                <a href="" alt="PDF Version" id="pdfbutton">DOWNLOAD PDF VERSION</a>
+                <a href="" alt="PDF Version" class="pdfbutton">DOWNLOAD PDF VERSION</a>
                 <hr>
             </div>
         </div>
@@ -380,7 +380,6 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         <div class="modal-dialog">
         <div class="modal-content">
         	<div class="modal-body">
-        		<a href="http://cppp.org" class="text-center"><img src="img/2015_COM_CPPP_logo_letterhead.png" alt="CPPP Logo" class="logo"></a>
         		<h5 class="text-center">
         		    Our Vision and Core Purpose
         		</h5>
@@ -392,7 +391,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
 to reach their full potential. We dare Texas to be the best state for 
 hard-working people and their families. 
         		</p>
-        		
+        		<a href="http://cppp.org" alt="PDF Version" class="pdfbutton">LEARN MORE</a>
         		<br/>
         		<button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true"> OK </button>
         	</div>
