--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
 to reach their full potential. We dare Texas to be the best state for 
 hard-working people and their families. 
         		</p>
-        		<a href="http://cppp.org" alt="PDF Version" class="pdfbutton">LEARN MORE</a>
+        		<a href="http://cppp.org" alt="PDF Version" class="pdfbutton text-center">LEARN MORE</a>
         		<br/>
         		<button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true"> OK </button>
         	</div>
