changed CPPP link in bio to link to site

--- a/index.html
+++ b/index.html
@@ -384,14 +384,13 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         		    Our Vision and Core Purpose
         		</h5>
         		<p class="text-justify">
-        		    At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas - a proud state that sets the bar nationally by expanding opportunity for all. 
+        		    At the <a href="http://cppp.org" alt="CPPP Site">Center for Public Policy Priorities</a>, we believe in a Texas that offers everyone the chance to compete and succeed in life. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas - a proud state that sets the bar nationally by expanding opportunity for all. 
                     <br>
                     <br>
                     CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds 
 to reach their full potential. We dare Texas to be the best state for 
 hard-working people and their families. 
         		</p>
-        		<a href="http://cppp.org" alt="PDF Version" class="pdfbutton text-center">LEARN MORE</a>
         		<br/>
         		<button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true"> OK </button>
         	</div>
