--- a/index.html
+++ b/index.html
@@ -55,11 +55,6 @@
             <div class="inner">
             	<a href="http://cppp.org"> <img src="img/2015_COM_CPPP_logo_letterhead.png" alt="Logo" class="logo"></a>
                 <h1><strong>2017</strong> Legislative Priorities</h1>
-                <p>At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
-                <br>
-                <br>
-Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
-				<br>
                 <p><i>Updated 11/1/2016</i></p>
                 <a href="" alt="PDF Version" class="pdfbutton">DOWNLOAD PDF VERSION</a>
                 <hr>
@@ -76,8 +71,10 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <h2 class="margin-top-0 text-primary">Built On The Bootstrap Grid</h2>
                     <br>
                     <p class="text-faded">
-                        Bootstrap's responsive grid comes in 4 sizes or "breakpoints": tiny (xs), small(sm), medium(md) and large(lg). These 4 grid sizes enable you create responsive layouts that behave accordingly on different devices.
-                    </p>
+                        At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
+                <br>
+                <br>
+Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
                     <a href="#three" class="btn btn-default btn-xl page-scroll">Learn More</a>
                 </div>
             </div>
