Changed menu section to Best Texas

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a class="page-scroll" href="#one">Intro</a>
+                        <a class="page-scroll" href="#one">The Best Texas</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#two">Highlights</a>
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
-                    <h2 class="margin-top-0 text-primary">Built On The Bootstrap Grid</h2>
+                    <h2 class="margin-top-0 text-primary">The Best Texas</h2>
                     <br>
                     <p class="text-faded">
                         At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
