changed next navigation button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <br>
                 <br>
 Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
-                    <a href="#three" class="btn btn-default btn-xl page-scroll">Learn More</a>
+                    <a href="#three" alt="PDF Version" class="pdfbutton">LEARN MORE</a>
                 </div>
             </div>
         </div>
