changed link in best texas

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <br>
                 <br>
 Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
-                    <strong><a href="#two">Click here for our what we want to see during the 86th Texas Legislative Session.</a></strong>
+                    <strong><a href="#two"><h1>Click here to read up on what we want to see during the 86th Texas Legislative Session.</h1></a></strong>
                 </div>
             </div>
         </div>
