removed "highlights" section

--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
                         <a class="page-scroll" href="#one">The Best Texas</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#two">Highlights</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#three">Gallery</a>
                     </li>
                     <li>
@@ -75,46 +72,12 @@
                 <br>
                 <br>
 Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
-                   <a href="#two" class="pdfbutton">OUR PRIORITIES</a>
+                   <a href="#three" class="pdfbutton">OUR PRIORITIES</a>
                 </div>
             </div>
         </div>
     </section>
-    <section id="two">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Flexible Layouts</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Responsive</h3>
-                        <p class="text-muted">Your site looks good everywhere</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
-                        <h3>Customizable</h3>
-                        <p class="text-muted">Easy to theme and customize with SASS</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 text-center">
-                    <div class="feature">
-                        <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Consistent</h3>
-                        <p class="text-muted">A mature, well-tested, stable codebase</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <section id="three" class="no-padding">
         <div class="container-fluid">
             <div class="row no-gutter">
