--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <br>
                 <br>
 Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
-                   <a href="#three" class="pdfbutton">OUR PRIORITIES</a>
+                   <a href="#three" class="pdfbutton page-scroll">OUR PRIORITIES</a>
                 </div>
             </div>
         </div>
