changed caption on first gallery modal

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="//splashbase.s3.amazonaws.com/unsplash/regular/photo-1430916273432-273c2db881a0%3Fq%3D75%26fm%3Djpg%26w%3D1080%26fit%3Dmax%26s%3Df047e8284d2fdc1df0fd57a5d294614d">
                         <img src="//splashbase.s3.amazonaws.com/unsplash/regular/photo-1430916273432-273c2db881a0%3Fq%3D75%26fm%3Djpg%26w%3D1080%26fit%3Dmax%26s%3Df047e8284d2fdc1df0fd57a5d294614d" class="img-responsive" alt="Image 1">
                         <div class="gallery-box-caption">
+                        	<h1>Ensure health and wellness</h1>
                             <div class="gallery-box-content">
                                 <div>
                                     <i class="icon-lg ion-ios-search"></i>
