--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
     <section class="container-fluid" id="four">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                <h2 class="text-center text-primary">Features</h2>
+                <h2 class="text-center text-primary">Our Priorities</h2>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Simple</h3>
+                    <h3>Ensure Health and Wellness</h3>
                     <div class="media-body media-middle">
                         <p>What could be easier? Get started fast with this landing page starter theme.</p>
                     </div>
@@ -91,7 +91,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 </div>
                 <hr>
                 <div class="media wow fadeIn">
-                    <h3>Free</h3>
+                    <h3>Expand Economic Opportunity</h3>
                     <div class="media-left">
                         <a href="#alertModal" data-toggle="modal" data-target="#alertModal"><i class="icon-lg ion-ios-cloud-download-outline"></i></a>
                     </div>
@@ -101,7 +101,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 </div>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Unique</h3>
+                    <h3>Invest in Texas</h3>
                     <div class="media-body media-middle">
                         <p>Because you don't want your Bootstrap site, to look like a Bootstrap site.</p>
                     </div>
@@ -110,25 +110,6 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                 </div>
                 <hr>
-                <div class="media wow fadeIn">
-                    <h3>Popular</h3>
-                    <div class="media-left">
-                        <i class="icon-lg ion-ios-heart-outline"></i>
-                    </div>
-                    <div class="media-body media-middle">
-                        <p>There's good reason why Bootstrap is the most used frontend framework in the world.</p>
-                    </div>
-                </div>
-                <hr>
-                <div class="media wow fadeInRight">
-                    <h3>Tested</h3>
-                    <div class="media-body media-middle">
-                        <p>Bootstrap is matured and well-tested. It's a stable codebase that provides consistency.</p>
-                    </div>
-                    <div class="media-right">
-                        <i class="icon-lg ion-ios-flask-outline"></i>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
