priorities section grids?

--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h3>Ensure Health and Wellness</h3>
                     <div class="media-body media-middle">
-                        <p>What could be easier? Get started fast with this landing page starter theme.</p>
+                    	<div class="col-xs-4">
+                        	<h4>Our vision</h4>
+                            <p>All Texans have meaningful access to affordable health care.</p>
+                        </div>
+                        <div class="col-xs-8">
+                        	<h4>Our Work</h4>
+                        </div>
                     </div>
                     <div class="media-right">
                         <i class="icon-lg ion-ios-bolt-outline"></i>
