--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
     
     <section class="container-fluid" id="four">
         <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+            <div class="col-xs-10 col-xs-offset-1">
                 <h2 class="text-center text-primary">Our Priorities</h2>
                 <hr>
                 <div class="media wow fadeInRight">
