took out "media content" class

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <hr>
                 <div class="media wow fadeInRight">
                     <h3>Ensure Health and Wellness</h3>
-                    <div class="media-body media-middle">
+                    <div>
                     	<div class="col-xs-4">
                         	<h4>Our vision</h4>
                             <p>All Texans have meaningful access to affordable health care.</p>
