added everything back in

--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
     
     <section class="container-fluid" id="four">
         <div class="row">
-            <div class="col-xs-10 col-xs-offset-2">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
                 <h2 class="text-center text-primary">Our Priorities</h2>
                 <hr>
                 <div class="media wow fadeInRight">
                     <h3>Ensure Health and Wellness</h3>
-                    <div>
+                    <div class="media-body media-middle">
                     	<div class="col-xs-4">
                         	<h4>Our vision</h4>
                             <p>All Texans have meaningful access to affordable health care.</p>
                         </div>
                         <div class="col-xs-8">
-                        	<h4>Our Work</h4>
+                        	
                         </div>
                     </div>
                     <div class="media-right">
