--- a/index.html
+++ b/index.html
@@ -81,15 +81,20 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <h2 class="text-center text-primary">Our Priorities</h2>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Ensure Health and Wellness</h3>
+                    <h2>Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
                     	<div class="col-xs-4">
-                        	<h4>Our vision</h4>
+                        	<h3>Our vision</h3>
                             <p>All Texans have meaningful access to affordable health care.</p>
                         </div>
-                        <div class="col-xs-8">
-                        	
-                        </div>
+                       		<div class="panel panel-default">
+  								<div class="panel-heading">
+    								<h3 class="panel-title">Panel title</h3>
+  								</div>
+  							<div class="panel-body">
+    								Panel content
+  								</div>
+							</div>
                     </div>
                     <div class="media-right">
                         <i class="icon-lg ion-ios-bolt-outline"></i>
@@ -97,7 +102,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 </div>
                 <hr>
                 <div class="media wow fadeIn">
-                    <h3>Expand Economic Opportunity</h3>
+                    <h2>Expand Economic Opportunity</h2>
                     <div class="media-left">
                         <a href="#alertModal" data-toggle="modal" data-target="#alertModal"><i class="icon-lg ion-ios-cloud-download-outline"></i></a>
                     </div>
@@ -107,7 +112,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 </div>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Invest in Texas</h3>
+                    <h2>Invest in Texas</h2>
                     <div class="media-body media-middle">
                         <p>Because you don't want your Bootstrap site, to look like a Bootstrap site.</p>
                     </div>
