--- a/index.html
+++ b/index.html
@@ -83,16 +83,15 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2>Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
-                    	<div class="col-xs-4">
-                        	<h3>Our vision</h3>
-                            <p>All Texans have meaningful access to affordable health care.</p>
+                    	<div class="col-xs-4">      
+                            
                         </div>
                        		<div class="panel panel-default">
   								<div class="panel-heading">
-    								<h3 class="panel-title">Panel title</h3>
+    								<h3 class="panel-title">Our Vision</h3>
   								</div>
   							<div class="panel-body">
-    								Panel content
+    								<p>All Texans have meaningful access to affordable health care.</p>
   								</div>
 							</div>
                     </div>
