added first panel list

--- a/index.html
+++ b/index.html
@@ -88,10 +88,15 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                         </div>
                        		<div class="panel panel-default">
   								<div class="panel-heading">
-    								<h3 class="panel-title">Our Vision</h3>
+    								<h3 class="panel-title">All Texans have meaningful access to affordable health care.</h3>
   								</div>
   							<div class="panel-body">
-    								<p>All Texans have meaningful access to affordable health care.</p>
+    							<ul>
+                                    <li>Protect Medicaid and CHIP from further damaging cuts.</li>
+                                    <li>Defeat bills that would reduce immigrant access to health care.</li>
+                                    <li>Increase funding and provider capacity for state family planning programs.</li>
+                                    <li>Support expanded scope of practice and access to non-physician medical and mental health professionals to make health care more affordable for Texans.</li>
+                                </ul>
   								</div>
 							</div>
                     </div>
