changed index to get rid of panel heading

--- a/index.html
+++ b/index.html
@@ -89,10 +89,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                         <div class="media-right">
                         <i class="icon-lg ion-ios-bolt-outline"></i>
                     </div>
-                       		<div class="panel panel-default">
-  								<div class="panel-heading">
-    								<h3 class="panel-title">All Texans have meaningful access to affordable health care.</h3>
-  								</div>
+                    <h3 class="visiontitle">All Texans have meaningful access to affordable health care.</h3>
+                       		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
                                     <li>Protect Medicaid and CHIP from further damaging cuts.</li>
