added more panels

--- a/index.html
+++ b/index.html
@@ -97,6 +97,32 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                    <h3 class="visiontitle">All Texans are insured and remain insured.</h3>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Improve enrollment and renewal of Medicaid and CHIP for children and pregnant women.</li>
+                                    <li>Prevent loss of Medicaid 1115 waiver funding.</li>
+                                    <li>Pass a Texas solution to the Coverage Gap for working poor Texans.</li>
+                                </ul>
+  								</div>
+							</div>
+                    <h3 class="visiontitle">Health coverage ensures access to quality care and financial protection.</h3>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Increase protections against surprise medical bills.</li>
+                                </ul>
+  								</div>
+                    <h3 class="visiontitle">All Texans with mental illness or substance use disorders are able to access services and do so in the least restrictive setting for their needs.</h3>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Endorse expanded peer support services in correctional facilities and on re-entry to the community.</li>
+                                    <li>Ensure clear standards and enforcement of federal and state laws requiring “parity” between mental health and substance use benefits and coverage for other medical services.</li>
+                                </ul>
+  								</div>
+							</div>
                     </div>
                 </div>
                 <hr>
