added last of health and wellness panels

--- a/index.html
+++ b/index.html
@@ -123,6 +123,15 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                    <h3 class="visiontitle">Texans are able to access existing safety net programs when needed, and benefits are extended to Texans raising children of other family members.</h3>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Improve benefit program access and administration.</li>
+                                    <li>Amend Temporary Assistance for Needy Families (TANF) to provide meaningful cash assistance to kinship families.</li>
+                                </ul>
+  								</div>
+							</div>
                     </div>
                 </div>
                 <hr>
