closed panel to separate bottom two

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                     <li>Increase protections against surprise medical bills.</li>
                                 </ul>
   								</div>
+                            </div>
                     <h3 class="visiontitle">All Texans with mental illness or substance use disorders are able to access services and do so in the least restrictive setting for their needs.</h3>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
