added more menu items

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
                         <a class="page-scroll" href="#four">Our Priorities</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#five">Health and Wellness</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#six">Economic Opportunity</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#seven">Invest in Texas</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#last">Contact</a>
                     </li>
                 </ul>
@@ -81,7 +90,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <h2 class="text-center text-primary">Our Priorities</h2>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h2>Ensure Health and Wellness</h2>
+                    <h2 id="#five" class="page-scroll">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
                     	<div class="col-xs-4">      
                             
