--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <h2 class="text-center text-primary">Our Priorities</h2>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h2 id="#five" class="page-scroll">Ensure Health and Wellness</h2>
+                    <h2 id="five" class="page-scroll">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
                     	<div class="col-xs-4">      
                             
