--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2 id="five" class="page-scroll">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
-                    	<div class="col-xs-4">      
-                            
+                    	<div class="col-xs-4">
+                        	<div class="glyphicon glyphicon-heart"></div>
                         </div>
                     <h4 class="visiontitle">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
@@ -147,9 +147,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <hr>
                 <div class="media wow fadeIn">
                     <h2>Expand Economic Opportunity</h2>
-                    <div class="media-left">
-                        <a href="#alertModal" data-toggle="modal" data-target="#alertModal"><i class="icon-lg ion-ios-cloud-download-outline"></i></a>
-                    </div>
+                    
                     <div class="media-body media-middle">
                         <p>Yes, please. Grab it for yourself, and make something awesome with this.</p>
                     </div>
