--- a/index.html
+++ b/index.html
@@ -92,9 +92,6 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2 id="five" class="page-scroll">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
-                    	<div class="col-xs-4">
-                        	<div class="glyphicon glyphicon-heart"></div>
-                        </div>
                     <h4 class="visiontitle">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
@@ -149,7 +146,16 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <h2>Expand Economic Opportunity</h2>
                     
                     <div class="media-body media-middle">
-                        <p>Yes, please. Grab it for yourself, and make something awesome with this.</p>
+                        <h4 class="visiontitle">Texas funds its public schools at a level adequate to meet the needs of all students.</h4>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Advance changes to the school finance system to improve equity in funding for all students.</li>
+                                    <li>Defeat efforts to divert limited public funding to voucher programs.</li>
+                                    <li>Support a statewide study of the cost of providing a quality education.</li>
+                                </ul>
+  								</div>
+							</div>
                     </div>
                 </div>
                 <hr>
