added page scroll to economic opportunity

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                 </div>
                 <hr>
-                <div class="media wow fadeIn">
+                <div class="media wow fadeIn page-scroll" id="six">
                     <h2>Expand Economic Opportunity</h2>
                     
                     <div class="media-body media-middle">
