added another panel to economic opportunity

--- a/index.html
+++ b/index.html
@@ -156,6 +156,25 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                     	<h4 class="visiontitle">Academic achievement gaps between socio-economic and racial/ethnic groups are closed.</h4>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Increase funding for the High-quality Prekindergarten Grants Program.</li>
+                                    <li>Advance policy solutions to address academic challenges faced by middle school students.</li>
+                                </ul>
+  								</div>
+                        <h4 class="visiontitle">Texas colleges become more affordable, and fewer students are dependent on loans.</h4>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Increase the amount of state funds community colleges can earn for improved student outcomes.</li>
+                                    <li>Defeat efforts to reduce financial aid funding or remove tuition-funded financial aid programs.</li>
+                                    <li>Adopt a funding policy that incentivizes closing academic achievement gaps between socio-economic and racial/ethnic groups.</li>
+                                    <li>Defeat efforts to repeal the Texas Dream Act.</li>
+                                </ul>
+  								</div>
+							</div>
                     </div>
                 </div>
                 <hr>
