Finished Economic Opportunity

--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                        <h4 class="visiontitle">All Texas workers have access to quality jobs.</h4>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Expand access to retirement savings in the workplace.</li>
+                                </ul>
+  								</div>
+							</div>
                     </div>
                 </div>
                 <hr>
