--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                     <li>Advance policy solutions to address academic challenges faced by middle school students.</li>
                                 </ul>
   								</div>
+                                </div>
                         <h4 class="visiontitle">Texas colleges become more affordable, and fewer students are dependent on loans.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
@@ -183,6 +184,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                            </div>
                     </div>
                 </div>
                 <hr>
