--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <hr>
             </div>
         </div>
+        </div>
     </section>
     <aside class="bg-dark">
         <div class="container text-center">
