--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2 id="five" class="page-scroll">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
-                    <h4 class="visiontitle">All Texans have meaningful access to affordable health care.</h4>
+                    <h4 class="visiontitlehealthhealth">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -103,7 +103,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                    <h4 class="visiontitle">All Texans are insured and remain insured.</h4>
+                    <h4 class="visiontitlehealth">All Texans are insured and remain insured.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -113,7 +113,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                    <h4 class="visiontitle">Health coverage ensures access to quality care and financial protection.</h4>
+                    <h4 class="visiontitlehealth">Health coverage ensures access to quality care and financial protection.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -121,7 +121,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
                             </div>
-                    <h4 class="visiontitle">All Texans with mental illness or substance use disorders are able to access services and do so in the least restrictive setting for their needs.</h4>
+                    <h4 class="visiontitlehealth">All Texans with mental illness or substance use disorders are able to access services and do so in the least restrictive setting for their needs.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -130,7 +130,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                    <h4 class="visiontitle">Texans are able to access existing safety net programs when needed, and benefits are extended to Texans raising children of other family members.</h4>
+                    <h4 class="visiontitlehealth">Texans are able to access existing safety net programs when needed, and benefits are extended to Texans raising children of other family members.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -146,7 +146,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <h2>Expand Economic Opportunity</h2>
                     
                     <div class="media-body media-middle">
-                        <h4 class="visiontitle">Texas funds its public schools at a level adequate to meet the needs of all students.</h4>
+                        <h4 class="visiontitlehealth">Texas funds its public schools at a level adequate to meet the needs of all students.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -156,7 +156,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                     	<h4 class="visiontitle">Academic achievement gaps between socio-economic and racial/ethnic groups are closed.</h4>
+                     	<h4 class="visiontitlehealth">Academic achievement gaps between socio-economic and racial/ethnic groups are closed.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -165,7 +165,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   							</div>
                             </div>
-                        <h4 class="visiontitle">Texas colleges become more affordable, and fewer students are dependent on loans.</h4>
+                        <h4 class="visiontitlehealth">Texas colleges become more affordable, and fewer students are dependent on loans.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -176,7 +176,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                        <h4 class="visiontitle">All Texas workers have access to quality jobs.</h4>
+                        <h4 class="visiontitlehealth">All Texas workers have access to quality jobs.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
