--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     </div>
                 </div>
                 <hr>
-                <div class="media wow fadeIn page-scroll" id="six">
-                    <h2>Expand Economic Opportunity</h2>
+                <div class="media wow fadeIn">
+                    <h2 class="page-scroll" id="six">Expand Economic Opportunity</h2>
                     
                     <div class="media-body media-middle">
-                        <h4 class="visiontitlehealth">Texas funds its public schools at a level adequate to meet the needs of all students.</h4>
+                        <h4 class="visiontitleeconomic">Texas funds its public schools at a level adequate to meet the needs of all students.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -156,7 +156,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                     	<h4 class="visiontitlehealth">Academic achievement gaps between socio-economic and racial/ethnic groups are closed.</h4>
+                     	<h4 class="visiontitleeconomic">Academic achievement gaps between socio-economic and racial/ethnic groups are closed.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -165,7 +165,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   							</div>
                             </div>
-                        <h4 class="visiontitlehealth">Texas colleges become more affordable, and fewer students are dependent on loans.</h4>
+                        <h4 class="visiontitleeconomic">Texas colleges become more affordable, and fewer students are dependent on loans.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -176,7 +176,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
-                        <h4 class="visiontitlehealth">All Texas workers have access to quality jobs.</h4>
+                        <h4 class="visiontitleeconomic">All Texas workers have access to quality jobs.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
@@ -188,7 +188,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h2>Invest in Texas</h2>
+                    <h2 class="page-scroll" id="seven">Invest in Texas</h2>
                     <div class="media-body media-middle">
                         <p>Because you don't want your Bootstrap site, to look like a Bootstrap site.</p>
                     </div>
