--- a/index.html
+++ b/index.html
@@ -190,7 +190,19 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2 class="page-scroll" id="seven">Invest in Texas</h2>
                     <div class="media-body media-middle">
-                        <p>Because you don't want your Bootstrap site, to look like a Bootstrap site.</p>
+                        <h4 class="visiontitleinvest">State and local revenue systems are capable of fully funding necessary public services.</h4>
+                       		<div class="panel panel-default">	
+  							<div class="panel-body">
+    							<ul>
+                                    <li>Prevent harmful tax cuts or revenue diversions.</li>
+                                    <li>Reject a tighter state spending cap.</li>
+                                    <li>Use the Rainy Day Fund, if needed, to prevent major cuts to education and health care.</li>
+                                    <li>Block efforts to further restrict local governments’ ability to raise the revenue needed for public services.</li>
+                                    <li>Improve the appraisal process to ensure assessment of all property at full market value.</li>
+                                </ul>
+  								</div>
+							</div>
+                            </div>
                     </div>
                     <div class="media-right">
                         <i class="icon-lg ion-ios-snowy"></i>
