added dome image

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     <section class="bg-primary" id="one">
         <div class="container">
             <div class="row">
+            <div class="col-md-3">
+            	<img src="img/dome.jpg" alt="The Capitol Dome" id="dome">
+            </div>
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
                     <h2 class="margin-top-0 text-primary">The Best Texas</h2>
                     <br>
