--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <section class="bg-primary" id="one">
         <div class="container">
             <div class="row">
-            <div class="col-md-3">
+            <div class="col-sm-6">
             	<img src="img/dome.jpg" alt="The Capitol Dome" id="dome">
             </div>
-                <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
+                <div class="col-sm-6">
                     <h2 class="margin-top-0 text-primary">The Best Texas</h2>
                     <br>
                     <p class="text-faded">
