--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
                         <a class="page-scroll" href="#one">The Best Texas</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#four">Our Priorities</a>
+                        <a class="page-scroll" href="#four"></a>
+                        <li class="dropdown">
+          					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Priorities<span class="caret"></span></a>
+         						<ul class="dropdown-menu">
+           							<li><a href="#">Action</a></li>
+            						<li><a href="#">Another action</a></li>
+            						<li><a href="#">Something else here</a></li>
+            						<li role="separator" class="divider"></li>
+            						<li><a href="#">Separated link</a></li>
+            						<li role="separator" class="divider"></li>
+            						<li><a href="#">One more separated link</a></li>
+          						</ul>
+        					</li>
                     </li>
                     <li>
                         <a class="page-scroll" href="#five">Health and Wellness</a>
