fixed backdrop of priorities container

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         </div>
     </section>
     
-    <section class="container-fluid" id="five">
+    <section class="container-fluid">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
                 <div class="media wow fadeInRight">
-                    <h2 class="page-scroll">Ensure Health and Wellness</h2>
+                    <h2 class="page-scroll" id="five">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
-                    <h4 class="visiontitlehealthhealth">All Texans have meaningful access to affordable health care.</h4>
+                    <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
