--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="img/P1000145000.jpg" id="video-background">
-            <source src="img/P1000145_1_1.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.</source>
+            <source src="img/legevideo.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.</source>
         </video>
     </header>
     <section class="bg-primary" id="one">
