took out extra http:// in PDF

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             	<a href="http://cppp.org"> <img src="img/2016_CPPP_Logo_Reverse_web.png" alt="Logo" class="logo"></a>
                 <h1><strong>2017</strong> Legislative Priorities</h1>
                 <p><i>Updated 11/1/2016</i></p>
-                <a href="http://http://forabettertexas.org/images/COM_2016_LegeStrategy.pdf" alt="PDF Version" class="pdfbutton">DOWNLOAD PDF VERSION</a>
+                <a href="http://forabettertexas.org/images/COM_2016_LegeStrategy.pdf" alt="PDF Version" class="pdfbutton">DOWNLOAD PDF VERSION</a>
             </div>
         </div>
         <video autoplay loop class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="img/P1000145000.jpg" id="video-background">
