--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 </div>
                 <div class="col-xs-12 col-sm-4">
                     <h4>About</h4>
-                    <a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" class="logo" alt="CPPP Logo"></a>
+                    <a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" class="logo text-center" alt="CPPP Logo"></a>
                     <p>CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds to reach their full potential. We dare Texas to be the best state for hard-working people and their families. If you have any questions about this data or something else in our work, please contact Oliver Bernstein at <a href="mailto:oliver@cppp.org">oliver@cppp.org.</a></p>
                 </div>
                 
