--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2 class="page-scroll" id="five">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
-                    <div class="col-xs-12"><img src="img/heart.png" alt="Heart" class="priorityimg"></div>
+                    <div class="text-xs-right">
+                    <img src="img/heart.png" alt="Heart" class="priorityimg img-responsive center-block">
+                    </div>
                     <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
